--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "wooheemusic/jsonthefly",
   "main": "index.js",
   "scripts": {
-    "bundle": "npx webpack",
+    "bundle": "npx babel src -d dist",
     "copy": "cp package.json dist/ && cp README.md dist/ && cp LICENSE dist/",
     "build": "npm run bundle && npm run copy"
   },
@@ -22,11 +22,7 @@
   },
   "homepage": "https://github.com/wooheemusic/jsonthefly#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "glob": "^7.1.2",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
