--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "repository": "wooheemusic/jsonthefly",
   "main": "index.js",
   "scripts": {
-    "bundle": "npx babel src -d dist",
-    "copy": "cp package.json dist/ && cp README.md dist/ && cp LICENSE dist/",
-    "build": "npm run bundle && npm run copy"
+    "babel": "npx babel ./src -d ./"
   },
   "keywords": [
     "string",
@@ -22,7 +20,8 @@
   },
   "homepage": "https://github.com/wooheemusic/jsonthefly#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3"
   }
 }
