--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/wooheemusic/jsonthefly#readme",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3"
-  }
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5"
+  },
+  "dependencies": {}
 }
