--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5"
   },
-  "dependencies": {}
+  "peerDependencies": {
+    "react": "^16.8 || 17",
+    "react-dom": "^16.8 || 17"
+  }
 }
