--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5"
+    "@babel/preset-env": "^7.14.5",
+    "babel-preset-minify": "^0.5.1"
   },
   "peerDependencies": {
     "react": "^16.8 || 17",
